--- a/src/global.scss
+++ b/src/global.scss
@@ -15,4 +15,10 @@
     height: 92vh;
     padding: 1px;
   }
+  agm-map  , .fixed-height{
+    height: 50vh !important;
+  }
+}
+agm-map {
+  height: 85vh;
 }
