add status to client

--- a/src/app/pages/add-client/add-client.page.html
+++ b/src/app/pages/add-client/add-client.page.html
@@ -43,6 +43,22 @@
                         </ion-col>
                     </ion-row>
 
+                    <ion-row>
+                        <ion-col>
+                            <ion-item>
+                                <ion-select interface="popover" placeholder="Select Status"
+                                            formControlName="clientStatus">
+                                    <ion-select-option slot="start" [value]="clientStatus.name"
+                                                       *ngFor="let clientStatus of clientStatus">{{clientStatus.name}}</ion-select-option>
+                                </ion-select>
+                            </ion-item>
+                        </ion-col>
+                        <ion-col [sizeXs]="1.7" [sizeMd]="1.3">
+                            <ion-button   (click)="addNewStatus()">
+                                <ion-icon name="add"></ion-icon>
+                            </ion-button>
+                        </ion-col>
+                    </ion-row>
 
                     <ion-item>
                         <ion-label position="floating" color="primary">Name</ion-label>
